2006-05-26  Matthieu Herrb <matthieu.herrb@laas.fr>

	* hw/xfree86/os-support/bsd/bsd_mouse.c:
	check buffersize before reading next char, fixes the 
	"mouse stuck at left" bug (bugzilla #3113) for BSD systems using 
	wscons. (Dale Rahn).

2006-05-25  Jeremy C. Reed  <reed@reedmedia.net>

	* doc/Xserver.man.pre:
	* hw/xfree86/doc/man/Xorg.man.pre:
	* hw/xfree86/doc/man/xorg.conf.man.pre:
	RGB color database and XErrorDB install to "share" not
	"lib" by default (by app/rgb and libX11). (TODO: They are
	customizable, so maybe cpprules.in should be extended.)

2006-05-25  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: Adam Jackson

	* hw/xfree86/common/xf86Config.c: (GenerateDriverlist):
	Don't do fixup_video_driver_list if no drivers.  (I had
	signal 11 and core dump when drivers not installed yet.)
	(TODO: fix fixup_video_driver_list to handle NULL argument.)

2006-05-25  Matthieu Herrb <matthieu.herrb@laas.fr>

	* mi/midispcur.c: (miDCCloseScreen)
	Don't destroy a pixmap twice on server exit (bugzilla #4247).
	* GL/symlink-mesa.sh:
	* GL/mesa/main/Makefile.am:
	update to build against Mesa CVS HEAD 
	(Carlos Eduardo Rodrigues Diógenes)

2006-05-24  Jeremy C. Reed  <reed@reedmedia.net>

	* hw/xfree86/utils/xorgcfg/text-mode.c:
	NetBSD also has curses.h instead of ncurses.h. (TODO:
	Maybe instead of checking for SCO, UnixWare, Sun SVR4 and
	NetBSD, the curses.h versus ncurses.h should be tested in
	configure.)

2006-05-24  Jeremy C. Reed  <reed@reedmedia.net>

	* configure.ac:
	On NetBSD, add -li386 for i386 and -lx86_64 for x86_64 to
	SYS_LIBS. (x86_64 on NetBSD not tested.)

2006-05-24  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: Daniel Stone

	* xkb/maprules.c: (XkbRF_LoadDescriptions):
	Remove tolower() which was missed in the _XkbStrCaseCmp/strcmp
	changes.

2006-05-23  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	Add AC_SUBST([SOLARIS_ASM_CFLAGS]) that I forgot when splitting
	them out of the XORG_CFLAGS.
